force-app/main/default/objects/Projeto__c/Projeto__c.object-meta.xml
<CustomObject>
    <label>Projeto</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Cod. Projeto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projetos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>