force-app/main/default/objects/Projeto__c/fields/Data_inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_inicio__c</fullName>
    <label>Data de início</label>
    <type>Date</type>
</CustomField>