force-app/main/default/objects/Projeto__c/fields/Data_termino__c.field-meta.xml
<CustomField>
    <fullName>Data_termino__c</fullName>
    <label>Data de término</label>
    <type>Date</type>
</CustomField>