force-app/main/default/objects/Projeto__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberto</fullName>
            </value>
            <value>
                <fullName>Em definição</fullName>
            </value>
            <value>
                <fullName>Em execução</fullName>
            </value>
            <value>
                <fullName>Em testes</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>